--- a/themes/Inkblotty2/layouts/partials/head.html
+++ b/themes/Inkblotty2/layouts/partials/head.html
@@ -2,6 +2,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
     <title>{{ .Title }}{{ if ne .Title .Site.Title}} - {{ .Site.Title }}{{end}}</title>
+    <meta name="description"  content="iPhoneアプリ開発をしていて詰まったこと、忘備録を整理して公開しようと思い作ってみました。" />
+    <meta property="og:title" content="Swiftの泳ぎ方と他の言語の忘備録" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="index.html" />
+    <meta property="og:image" content="swift.png" />
+    <meta property="og:site_name" content="すいすいSwift" />
+    <meta property="og:description" content="iPhoneアプリ開発をしていて詰まったこと、忘備録を整理して公開しようと思い作ってみました。 もし間違い、動かないなどありましたら、コメントを頂けましたら幸いです。 内容は随時更新して充実させていく予定です。" />
+    <meta property="og:image:secure_url" content="swift.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Swiftの泳ぎ方と他の言語の忘備録" />
+    <meta name="twitter:description" content="iPhoneアプリ開発をしていて詰まったこと、忘備録を整理して公開しようと思い作ってみました。 もし間違い、動かないなどありましたら、コメントを頂けましたら幸いです。 内容は随時更新して充実させていく予定です。" />
+    <meta name="twitter:image" content="swift.png" />
+
 
     <style type="text/css">
         img.wp-smiley,
@@ -19,5 +32,5 @@
     </style>
     <link rel='stylesheet' href='{{ "css/style.css" | absURL }}' type='text/css' media='all' />
     <link rel='stylesheet' href='{{ "css/custom.css" | absURL }}' type='text/css' media='all' />
-    {{ template "_internal/google_analytics.html" . }}    
+    {{ template "_internal/google_analytics.html" . }}
 </head>
