記事をつい亜k

--- a/themes/swiswiswift/layouts/_default/single.html
+++ b/themes/swiswiswift/layouts/_default/single.html
@@ -16,7 +16,10 @@
             <h2 class="post-title">{{ .Title }}</h2>
             <div class="post-info">
                 <ul class="post-cat">
-                    <li><a href="#">AWS</a></li>
+                    {{ with .Params.tags }}
+                    {{ range . }}
+                    <li><a href="{{- "/tags/" | absURL -}}{{- . | urlize -}}" rel="tag">{{ . }}</a></li>
+                    <!-- <li><a href="#">AWS</a></li>
                     <li><a href="#">Linux</a></li>
                     <li><a href="#">iOS</a></li>
                     <li><a href="#">SSH</a></li>
@@ -28,10 +31,15 @@
                     <li><a href="#">Terraform</a></li>
                     <li><a href="#">Ruby</a></li>
                     <li><a href="#">電子工作</a></li>
-                    <li><a href="#">就活</a></li>
+                    <li><a href="#">就活</a></li> -->
+                    {{ end }} 
+                    {{ end }} 
+
                 </ul>
             </div>
-            <time class="post-date" datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date | time.Format ":date_long" }}</time>
+            {{ $dateMachine := .Date | time.Format "2006-01-02" }}
+            {{ $dateHuman := .Date | time.Format ":date_long" }}
+            <time class="post-date" datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
         </header>
 
         {{ .Content }}
@@ -39,79 +47,38 @@
     </article>
 
     <aside class="sidebar">
-        <h3 class="heading-medium">カテゴリ</h3>
+        <!-- <h3 class="heading-medium">カテゴリ</h3>
         <ul class="side-menu-category">
-            <li><a href="#">AWS</a></li>
-            <li><a href="#">Linux</a></li>
-            <li><a href="#">iOS</a></li>
-            <li><a href="#">SSH</a></li>
-            <li><a href="#">セキュリティ</a></li>
-            <li><a href="#">AWS</a></li>
-            <li><a href="#">GCP</a></li>
-            <li><a href="#">Swift</a></li>
-            <li><a href="#">Golang</a></li>
-            <li><a href="#">Terraform</a></li>
-            <li><a href="#">Ruby</a></li>
-            <li><a href="#">電子工作</a></li>
-            <li><a href="#">就活</a></li>
-            <li><a href="#">Firebase</a></li>
-            <li><a href="#">Python</a></li>
-            <li><a href="#">Tex</a></li>
+            {{- range $name, $items := .Site.Taxonomies.categories -}}
+
+             <li><a href="{{- "categories/" | relLangURL -}}{{- $name | urlize | lower -}}">{{ .Page.Title }}</a></li>
+
+            {{- end }}
+        </ul> -->
+
+
+        <h3 class="heading-medium">タグ</h3>
+        <ul class="side-menu-category">
+            {{- range $name, $items := .Site.Taxonomies.tags -}}
+            <li><a href="{{- "tags/" | relLangURL -}}{{- $name | urlize | lower -}}">{{ .Page.Title }}</a></li>
+            {{- end }}
         </ul>
-        <h3 class="heading-medium">アーカイブ</h3>
+
+
+        <h3 class="heading-medium">カテゴリ</h3>
         <ul class="side-menu-archive">
-            <li><a href="#">2024/04 (3)</a></li>
-            <li><a href="#">2024/03 (3)</a></li>
-            <li><a href="#">2024/02 (3)</a></li>
-            <li><a href="#">2024/01 (3)</a></li>
-            <li><a href="#">2023/12 (3)</a></li>
-            <li><a href="#">2023/11 (3)</a></li>
-            <li><a href="#">2023/10 (3)</a></li>
-            <li><a href="#">2023/09 (3)</a></li>
-            <li><a href="#">2023/08 (3)</a></li>
-            <li><a href="#">2023/07 (3)</a></li>
-            <li><a href="#">2023/06 (3)</a></li>
-            <li><a href="#">2023/05 (3)</a></li>
-            <li><a href="#">2023/04 (3)</a></li>
-            <li><a href="#">2023/03 (3)</a></li>
-            <li><a href="#">2023/02 (3)</a></li>
-            <li><a href="#">2023/01 (3)</a></li>
-            <li><a href="#">2022/12 (3)</a></li>
-            <li><a href="#">2022/11 (3)</a></li>
-            <li><a href="#">2022/10 (3)</a></li>
-            <li><a href="#">2022/09 (3)</a></li>
-            <li><a href="#">2022/08 (3)</a></li>
-            <li><a href="#">2022/07 (3)</a></li>
-            <li><a href="#">2022/06 (3)</a></li>
-            <li><a href="#">2022/05 (3)</a></li>
-            <li><a href="#">2022/04 (3)</a></li>
-            <li><a href="#">2022/03 (3)</a></li>
-            <li><a href="#">2022/02 (3)</a></li>
-            <li><a href="#">2022/01 (3)</a></li>
-            <li><a href="#">2021/12 (3)</a></li>
-            <li><a href="#">2021/11 (3)</a></li>
-            <li><a href="#">2021/10 (3)</a></li>
-            <li><a href="#">2021/09 (3)</a></li>
-            <li><a href="#">2021/08 (3)</a></li>
-            <li><a href="#">2021/07 (3)</a></li>
-            <li><a href="#">2021/06 (3)</a></li>
-            <li><a href="#">2021/05 (3)</a></li>
-            <li><a href="#">2021/04 (3)</a></li>
-            <li><a href="#">2021/03 (3)</a></li>
-            <li><a href="#">2021/02 (3)</a></li>
-            <li><a href="#">2021/01 (3)</a></li>
-            <li><a href="#">2021/12 (3)</a></li>
-            <li><a href="#">2021/11 (3)</a></li>
-            <li><a href="#">2020/10 (3)</a></li>
-            <li><a href="#">2020/09 (3)</a></li>
-            <li><a href="#">2020/08 (3)</a></li>
-            <li><a href="#">2020/07 (3)</a></li>
-            <li><a href="#">2020/06 (3)</a></li>
-            <li><a href="#">2020/05 (3)</a></li>
-            <li><a href="#">2020/04 (3)</a></li>
-            <li><a href="#">2020/03 (3)</a></li>
+
+            {{- range $name, $items := .Site.Taxonomies.categories -}}
+
+             <li><a href="{{- "categories/" | relLangURL -}}{{- $name | urlize | lower -}}">{{ .Page.Title }} ({{ $items.Count }})</a></li>
+
+            {{- end }}
+
+
+            <!-- <li><a href="#">2024/03 (3)</a></li>
+
             <li><a href="#">2020/02 (3)</a></li>
-            <li><a href="#">2020/01 (3)</a></li>
+            <li><a href="#">2020/01 (3)</a></li> -->
         </ul>
     </aside>
 </main>
