からファイルを追加

--- a/themes/swiswiswift/layouts/partials/header.html
+++ b/themes/swiswiswift/layouts/partials/header.html
@@ -8,9 +8,9 @@
         </h1>
         <nav>
             <ul class="main-nav">
-                <li><a href="news.html">News</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/posts/">Posts</a></li>
+                <li><a href="/products/">Products</a></li>
+                <li><a href="/abouts/">Abouts</a></li>
             </ul>
         </nav>
     </header>
