--- a/themes/swiswiswift/layouts/_default/list.html
+++ b/themes/swiswiswift/layouts/_default/list.html
@@ -6,7 +6,10 @@
         <a href="{{ .RelPermalink }}">
           <h2>{{ .LinkTitle }}</h2>
         </a>
-        <time class="home-date" datetime="2024-09-08">{{ .Date.Format "2006-01-02" }}</time>
+
+        {{ $dateMachine := .Date | time.Format "2006-01-02" }}
+        {{ $dateHuman := .Date | time.Format ":date_long" }}
+        <time class="home-date" datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
         <p>{{ .Summary }}</p>
         <hr>
       </div>
